# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   handler.ErrorResponse:
     properties:
@@ -9,10 +10,10 @@ definitions:
       Id:
         type: integer
     type: object
-  model.DeleteEventDoc:
+  model.AddGroupMemberDoc:
     properties:
-      eventID:
-        type: integer
+      username:
+        type: string
     type: object
   model.EventDoc:
     properties:
@@ -26,12 +27,71 @@ definitions:
         type: string
       type:
         type: string
-      userID:
-        type: string
     required:
     - endTime
     - startTime
     - title
+    type: object
+  model.FreeTimeInputDoc:
+    properties:
+      date:
+        type: string
+    type: object
+  model.FreeTimeResponseDoc:
+    properties:
+      freeSlots:
+        items:
+          $ref: '#/definitions/model.TimeSlot'
+        type: array
+    type: object
+  model.FriendRequestDoc:
+    properties:
+      username:
+        type: string
+    type: object
+  model.Group:
+    properties:
+      confirmedTime:
+        type: string
+      groupID:
+        type: integer
+      name:
+        type: string
+      ownerID:
+        type: integer
+    required:
+    - name
+    type: object
+  model.GroupDetails:
+    properties:
+      confirmedTime:
+        type: string
+      groupID:
+        type: integer
+      members:
+        items:
+          $ref: '#/definitions/model.GroupMemberInfo'
+        type: array
+      name:
+        type: string
+      ownerID:
+        type: integer
+    required:
+    - name
+    type: object
+  model.GroupMemberInfo:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      username:
+        type: string
+    type: object
+  model.RenewTokenDoc:
+    properties:
+      refreshToken:
+        type: string
     type: object
   model.SignInDoc:
     properties:
@@ -51,6 +111,18 @@ definitions:
       username:
         type: string
     type: object
+  model.TelegramAuthDoc:
+    properties:
+      initData:
+        type: string
+    type: object
+  model.TimeSlot:
+    properties:
+      end:
+        type: string
+      start:
+        type: string
+    type: object
 host: localhost:8000
 info:
   contact: {}
@@ -68,7 +140,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.EventDoc'
+            items:
+              $ref: '#/definitions/model.EventDoc'
+            type: array
         "400":
           description: Bad Request
           schema:
@@ -95,14 +169,14 @@ paths:
       consumes:
       - application/json
       description: Create event
-      operationId: delete-event
+      operationId: create-event
       parameters:
       - description: list info
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/model.DeleteEventDoc'
+          $ref: '#/definitions/model.EventDoc'
       produces:
       - application/json
       responses:
@@ -128,14 +202,430 @@ paths:
             $ref: '#/definitions/handler.ErrorResponse'
       security:
       - ApiKeyAuth: []
+      summary: Create Event
+      tags:
+      - events
+  /api/events/{id}:
+    delete:
+      description: Delete event by ID
+      operationId: delete-event
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Delete Event
       tags:
       - events
+  /api/events/free-time:
+    post:
+      consumes:
+      - application/json
+      description: Get free time slots for a given day
+      operationId: get-free-time
+      parameters:
+      - description: date
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.FreeTimeInputDoc'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.FreeTimeResponseDoc'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get free time slots
+      tags:
+      - events
+  /api/friends/:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: username
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.FriendRequestDoc'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete friend
+      tags:
+      - friends
+  /api/friends/accept:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: username
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.FriendRequestDoc'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Accept friend request
+      tags:
+      - friends
+  /api/friends/list:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: List friends
+      tags:
+      - friends
+  /api/friends/reject:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: username
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.FriendRequestDoc'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Reject friend request
+      tags:
+      - friends
+  /api/friends/request:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: username
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.FriendRequestDoc'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Send friend request
+      tags:
+      - friends
+  /api/friends/request-list:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: List all pending friend requests
+      tags:
+      - friends
+  /api/friends/requests/incoming:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: List incoming friend requests
+      tags:
+      - friends
+  /api/friends/requests/outgoing:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: List outgoing friend requests
+      tags:
+      - friends
+  /api/groups/{id}:
+    get:
+      parameters:
+      - description: Group ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.GroupDetails'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get group details
+      tags:
+      - groups
+  /api/groups/{id}/members:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Group ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: member username
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.AddGroupMemberDoc'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Add group member
+      tags:
+      - groups
+  /api/groups/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: group info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.Group'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Create group
+      tags:
+      - groups
+  /api/groups/list:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: List user groups
+      tags:
+      - groups
+  /auth/renew-token:
+    post:
+      consumes:
+      - application/json
+      description: renew token
+      operationId: renew-token
+      parameters:
+      - description: account info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.RenewTokenDoc'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: RenewToken
+      tags:
+      - Auth
   /auth/sign-in:
     post:
       consumes:
       - application/json
-      operationId: sign in
+      description: sign in
+      operationId: sign-in
       parameters:
       - description: account info
         in: body
@@ -149,7 +639,9 @@ paths:
         "200":
           description: OK
           schema:
-            type: integer
+            additionalProperties:
+              type: string
+            type: object
         "400":
           description: Bad Request
           schema:
@@ -173,6 +665,7 @@ paths:
     post:
       consumes:
       - application/json
+      description: create account
       operationId: create-account
       parameters:
       - description: account info
@@ -187,7 +680,9 @@ paths:
         "200":
           description: OK
           schema:
-            type: integer
+            additionalProperties:
+              type: integer
+            type: object
         "400":
           description: Bad Request
           schema:
@@ -205,6 +700,43 @@ paths:
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: SignUp
+      tags:
+      - Auth
+  /auth/telegram:
+    post:
+      consumes:
+      - application/json
+      description: authenticate via Telegram WebApp initData
+      operationId: telegram-auth
+      parameters:
+      - description: Telegram init data
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.TelegramAuthDoc'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: TelegramAuth
       tags:
       - Auth
 securityDefinitions:
